patches in alpha5 grid updates to bootstrap4, adds local font awesome stylesheets to fix legacy browser support of namespaced icons, adds legacy browser support and updates class names in the views to utilize the new grid syntax for offsets and vertical alignment.

--- a/app/assets/stylesheets/nfg_csv_importer/bootstrap4_theme/importer_components/_modal_interstitial.scss
+++ b/app/assets/stylesheets/nfg_csv_importer/bootstrap4_theme/importer_components/_modal_interstitial.scss
@@ -52,7 +52,7 @@
         padding-top: 60px;
       }
 
-      > .row-xs-center{
+      > .flex-items-xs-middle{
         height: 100%;
       }
     }
